last try today... after upgrading to java 24